RESOLVED FIXED18899
REGRESSION (r32871): Non-Safari crash in WTF::HashTable on startup
https://bugs.webkit.org/show_bug.cgi?id=18899
Summary REGRESSION (r32871): Non-Safari crash in WTF::HashTable on startup
Matt Lilek
Reported 2008-05-05 16:06:55 PDT
<http://trac.webkit.org/changeset/32871> caused my WebView-embedding app to crash on startup. I have a small sample project I'll upload. Thread 0 Crashed: 0 com.apple.WebCore 0x022a4ac9 WTF::HashTable<WebCore::StringImpl*, WebCore::StringImpl*, WTF::IdentityExtractor<WebCore::StringImpl*>, WebCore::StringHash, WTF::HashTraits<WebCore::StringImpl*>, WTF::HashTraits<WebCore::StringImpl*> >::invalidateIterators() + 9 (HashTable.h:1016) 1 com.apple.WebCore 0x022a643f std::pair<WTF::HashTableIterator<WebCore::StringImpl*, WebCore::StringImpl*, WTF::IdentityExtractor<WebCore::StringImpl*>, WebCore::StringHash, WTF::HashTraits<WebCore::StringImpl*>, WTF::HashTraits<WebCore::StringImpl*> >, bool> WTF::HashTable<WebCore::StringImpl*, WebCore::StringImpl*, WTF::IdentityExtractor<WebCore::StringImpl*>, WebCore::StringHash, WTF::HashTraits<WebCore::StringImpl*>, WTF::HashTraits<WebCore::StringImpl*> >::addPassingHashCode<char const*, char const*, WTF::HashSetTranslatorAdapter<WebCore::StringImpl*, WTF::HashTraits<WebCore::StringImpl*>, char const*, WebCore::CStringTranslator> >(char const* const&, char const* const&) + 39 (HashTable.h:695) 2 com.apple.WebCore 0x022a6631 std::pair<WTF::HashTableIteratorAdapter<WTF::HashTable<WebCore::StringImpl*, WebCore::StringImpl*, WTF::IdentityExtractor<WebCore::StringImpl*>, WebCore::StringHash, WTF::HashTraits<WebCore::StringImpl*>, WTF::HashTraits<WebCore::StringImpl*> >, WebCore::StringImpl*>, bool> WTF::HashSet<WebCore::StringImpl*, WebCore::StringHash, WTF::HashTraits<WebCore::StringImpl*> >::add<char const*, WebCore::CStringTranslator>(char const* const&) + 45 3 com.apple.WebCore 0x022a3c85 WebCore::AtomicString::add(char const*) + 107 (AtomicString.cpp:81) 4 com.apple.WebCore 0x0231c15c WebCore::AtomicString::AtomicString(char const*) + 24 (AtomicString.h:34) 5 com.apple.WebCore 0x02932164 WebCore::Loader::Loader() + 58 6 com.apple.WebCore 0x0232b538 WebCore::Cache::Cache() + 42 7 com.apple.WebCore 0x0232c64b WebCore::cache() + 55 (Cache.cpp:50) 8 com.apple.WebKit 0x00349a35 +[WebView(WebFileInternal) _setCacheModel:] + 379 (WebView.mm:4051) 9 com.apple.WebKit 0x0034a0f4 +[WebView(WebFileInternal) _preferencesChangedNotification:] + 290 (WebView.mm:4086) 10 com.apple.Foundation 0x96f01bda _nsnote_callback + 106 11 com.apple.CoreFoundation 0x9646c9da __CFXNotificationPost + 362 12 com.apple.CoreFoundation 0x9646ccb3 _CFXNotificationPostNotification + 179 13 com.apple.Foundation 0x96efefd0 -[NSNotificationCenter postNotificationName:object:userInfo:] + 128 14 com.apple.WebKit 0x0033441c -[WebPreferences(WebPrivate) _postPreferencesChangesNotification] + 93 (WebPreferences.m:933) 15 com.apple.WebKit 0x0033135f -[WebPreferences initWithIdentifier:] + 575 (WebPreferences.m:217) 16 com.apple.WebKit 0x003319c0 +[WebPreferences standardPreferences] + 92 (WebPreferences.m:287) 17 com.apple.WebKit 0x003505f2 -[WebView _commonInitializationWithFrameName:groupName:] + 48 (WebView.mm:1847) 18 com.apple.WebKit 0x00340552 -[WebView initWithCoder:] + 1314 (WebView.mm:1989)
Attachments
Matt Lilek
Comment 1 2008-05-05 16:13:36 PDT
(In reply to comment #0) > I have a small sample project I'll upload. Even easier: this reproduces with MiniBrowser. All my code does is: [mWebView.mainFrame loadRequest:[NSURLRequest requestWithURL:[NSURL URLWithString:@"http://www.google.com/"]]];
Antti Koivisto
Comment 2 2008-05-05 16:35:53 PDT
Sending WebCore/ChangeLog Sending WebCore/loader/loader.cpp Transmitting file data .. Committed revision 32887.
Note You need to log in before you can comment on or make changes to this bug.