2008-05-05  Antti Koivisto  <antti@apple.com>

Reviewed by Anders.

        Fix https://bugs.webkit.org/show_bug.cgi?id=18899
        Bug 18899: REGRESSION (r32871): Non-Safari crash in WTF::HashTable on startup

        * loader/loader.cpp:
        (WebCore::Loader::Loader):



Canonical link: https://commits.webkit.org/26103@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32887 268f45cc-cd09-0410-ab3c-d52691b4dbfc